--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>Art Club</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,29 +27,24 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" Click <a href="https://www.seattleacademy.org/">Home</a> to saas home page.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header class="masthead text-center text-white">
+    <header class="masthead text-center text-black">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-          <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+          <h1 class="masthead-heading mb-0">Art Club</h1>
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
@@ -63,13 +58,13 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/01.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="https://photos.smugmug.com/Arts/Visual/2017-2018-SAAS-Arts-Show-Alumni-Reunion/i-GD3HSq8/0/249a83e8/S/2017-2018%20%20SAAS%20Art%20Show%20MegC%2013-S.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">For those about to rock...</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">For those who want a community.</h2>
+              <p>In art club, we play nice relaxing music when students can chill out. There is no requrement on art peices produced only that you have fun!</p>
             </div>
           </div>
         </div>
@@ -81,13 +76,13 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="https://photos.smugmug.com/Arts/Visual/2017-2018-SAAS-Arts-Show-Alumni-Reunion/i-qM5rg2n/0/5a2d236d/S/Art%20Show%202017-18%20%2831%20of%20112%29%20NIck%20L-S.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">We salute you!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">People have fun here!</h2>
+              <p>The point of Art Club is for you to express your-self. We do not demand you do our project but create your own. If you need our help we will be there. We help students all the time, even the best ones! We help start ideas, but do not give you them.  </p>
             </div>
           </div>
         </div>
@@ -99,13 +94,13 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="https://photos.smugmug.com/Arts/Visual/2017-2018-SAAS-Arts-Show-Alumni-Reunion/i-Mf2c4tQ/0/476c27b0/S/Art%20Show%202017-18%20%2825%20of%20112%29%20NIck%20L-S.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Let there be rock!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">You do not have to stay.</h2>
+              <p>In Art club we do not demand that you come to every meeting. You can show up when you want. You do not have to stay for the whole time. Our only rule is that if you start a project you finnish it. </p>
             </div>
           </div>
         </div>
@@ -115,7 +110,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white small">Seattle Academy &copy; Art Club 2018</p>
       </div>
       <!-- /.container -->
     </footer>
