--- a/index.html
+++ b/index.html
@@ -28,14 +28,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" Click <a href="https://www.seattleacademy.org/">Home</a> to saas home page.</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-            </li>
+            <li> <a href="https://saasphotogallery.smugmug.com/Arts/Visual/2017-2018-SAAS-Arts-Show-Alumni-Reunion/">All art</a>   
+             
           </ul>
         </div>
       </div>
